Sync up with my other cookbooks

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 *.gem
+.zero-knife.rb
 *.rbc
 .bundle
 .config
@@ -11,10 +12,35 @@ spec/reports
 test/tmp
 test/version_tmp
 tmp
+Gemfile.lock
+_Store
+*~
+*#
+.#*
+\#*#
+.*.sw[a-z]
+*.un~
+*.tmp
+*.bk
+*.bkup
+.ruby-version
+.ruby-gemset
+.rvmrc
 
 # YARD artifacts
 .yardoc
 _yardoc
 doc/
+.idea
+.ruby-version
+
+#chef stuff
 Berksfile.lock
-Gemfile.lock
+.kitchen
+.kitchen.local.yml
+vendor/
+.coverage/
+
+#vagrant stuff
+.vagrant/
+.vagrant.d/
