--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,12 +1,10 @@
 AllCops:
   Exclude:
-    - vendor/**
+    - vendor/**/*
 
 AlignParameters:
   Enabled: false
 Encoding:
-  Enabled: false
-HashSyntax:
   Enabled: false
 LineLength:
   Enabled: false
