--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,11 @@
+sudo: false
+cache: bundler
 language: ruby
 rvm:
-  - 1.9.3
-  - 2.0.0
-  - 2.1.1
+  - 2.0
+  - 2.1
+  - 2.2
 script:
-  - bundle exec rspec --color --format progress
   - bundle exec foodcritic -f any --tags ~FC003 --tags ~FC015 --tags ~FC023 .
   - bundle exec rubocop
-
+  - bundle exec rspec --color --format progress
