--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -3,9 +3,15 @@ driver:
 
 provisioner:
   name: chef_zero
+  deprecations_as_errors: true
+
+verifier:
+  name: inspec
 
 platforms:
-  - name: ubuntu-12.04
+  - name: debian-7
+  - name: debian-8
+  - name: debian-9
   - name: ubuntu-14.04
   - name: ubuntu-16.04
 
