--- a/.travis.yml
+++ b/.travis.yml
@@ -23,6 +23,7 @@ env:
   - INSTANCE=default-debian-9
   - INSTANCE=default-ubuntu-1404
   - INSTANCE=default-ubuntu-1604
+  - INSTANCE=default-ubuntu-1804
 
 before_script:
   - sudo iptables -L DOCKER || ( echo "DOCKER iptables chain missing" ; sudo iptables -N DOCKER )
